Fix overlapping menus

--- a/sass/_content.scss
+++ b/sass/_content.scss
@@ -1,6 +1,6 @@
 
 body > .content {
-    z-index: 4;
+    z-index: 3; // To not overlap "My Subreddits menu"
     position: relative;
     border-radius: 2px;
     background: white;
@@ -14,6 +14,9 @@ body > .content {
 
     box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.3);
     // overflow: hidden;
+}
+body.submit-page > .content {
+    z-index: 4; // To not overlap "Link/Text tabs"
 }
 
 $tagline-height: 22px;
